# rstd

./: .editorconfig  .gitignore  LICENSE-MIT  meson.build
include/rstd/alloc/: boxed.hpp  vec.hpp
include/rstd/core/: cmp.hpp  cxxstd.hpp  iter.hpp  macros.hpp  ops.hpp  option.hpp  panicking.hpp  primitive.hpp  ptr.hpp  result.hpp  slice.hpp  str.hpp  tuple.hpp
include/rstd/core/mem/: maybe-uninit.hpp
include/rstd/std/: fs.hpp  io.hpp  path.hpp
include/rstd/std/os/: fd.hpp
src/: meson.build
src/core/: panicking.cpp  str.cpp
src/std/: fs.cpp  io.cpp
src/std/os/: fd.cpp
test/: meson.build  test-io.cpp  test-slice.cpp  test-str.cpp  test-tuple.cpp  test-vec.cpp
