test_slice = executable('test-slice', 'test-slice.cpp', dependencies: rstd)
test('test-slice', test_slice)

test_vec = executable('test-vec', 'test-vec.cpp', dependencies: rstd)
test('test-vec', test_vec)

test_io = executable('test-io', 'test-io.cpp', dependencies: rstd)
test('test-io', test_io)

test_tuple = executable('test-tuple', 'test-tuple.cpp', dependencies: rstd)
test('test-tuple', test_tuple)

test_str = executable('test-str', 'test-str.cpp', dependencies: rstd)
test('test-str', test_str)
